--- a/app.json
+++ b/app.json
@@ -114,7 +114,7 @@
       "manager",
       "bot"
    ],
-   "logo": "https://telegra.ph/file/950e2c28960bfc78386fc.jpg",
-   "name": "Mrbunny-robot",
-   "repository": "https://github.com/nub-sir/Mrbunny-robot"
+   "logo": "https://github.com/nub-sir/sethx-bot",
+   "name": "Sethx-bot",
+   "repository": "https://github.com/nub-sir/sethx-bot"
 }
