--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ emoji
 telethon==1.16.4
 beautifulsoup4
 requests
-sqlalchemy
+sqlalchemy==1.3.20
 python-telegram-bot==11.1.0
 psycopg2-binary
 feedparser
